import React from 'react';

import Spin from '..';
import mountTest from '../../../tests/shared/mountTest';
import rtlTest from '../../../tests/shared/rtlTest';
import { act, render, waitFakeTimer } from '../../../tests/utils';
import ConfigProvider from '../../config-provider';

describe('Spin', () => {
  beforeEach(() => {
    jest.useFakeTimers();
  });

  afterEach(() => {
    jest.clearAllTimers();
    jest.useRealTimers();
  });

  mountTest(Spin);
  rtlTest(Spin);

  it('should only affect the spin element when set style to a nested <Spin>xx</Spin>', () => {
    const { container } = render(
      <Spin style={{ padding: 20 }}>
        <div>content</div>
      </Spin>,
    );
    // After refactoring, the root element is the spin element itself
    expect(container.querySelector<HTMLElement>('.g-spin')).toHaveStyle({ padding: '20px' });
  });

  it('should not apply nested styles when full screen', () => {
    const { container } = render(
      <Spin fullscreen>
        <div>content</div>
      </Spin>,
    );
    expect(container.querySelector<HTMLElement>('g-spin-nested-loading')).toBeNull();
  });

  it("should render custom indicator when it's set", () => {
    const customIndicator = <div className="custom-indicator" />;
    const { asFragment } = render(<Spin indicator={customIndicator} />);
    expect(asFragment().firstChild).toMatchSnapshot();
  });

  it('should be controlled by spinning', async () => {
    jest.useFakeTimers();
    const { container, rerender } = render(<Spin spinning={false} />);
    expect(container.querySelector('.g-spin-spinning')).toBeFalsy();
    rerender(<Spin spinning />);
    await waitFakeTimer();
    expect(container.querySelector('.g-spin-spinning')).toBeTruthy();
    jest.clearAllTimers();
    jest.useRealTimers();
  });

  it('if indicator set null should not be render default indicator', () => {
    const { asFragment } = render(<Spin indicator={null as any} />);
    expect(asFragment().firstChild).toMatchSnapshot();
  });

  it('should support static method Spin.setDefaultIndicator', () => {
    Spin.setDefaultIndicator(<em className="custom-spinner" />);
    const { asFragment } = render(<Spin />);
    expect(asFragment().firstChild).toMatchSnapshot();
    Spin.setDefaultIndicator(null);
  });

  it('should render 0', () => {
    const { container } = render(<Spin>{0}</Spin>);
    expect(container.querySelector('.g-spin-container')?.textContent).toBe('0');
  });

  it('right style when fullscreen', () => {
    const { container } = render(<Spin fullscreen spinning />);
    const element = container.querySelector<HTMLDivElement>('.g-spin-fullscreen');
    expect(element).not.toHaveStyle({ pointerEvents: 'none' });
  });

  it('should support ConfigProvider indicator', () => {
    const { container } = render(
      <ConfigProvider spin={{ indicator: <div className="custom-indicator" /> }}>
        <Spin />
      </ConfigProvider>,
    );
    expect(container.querySelector('.custom-indicator')).toBeTruthy();
  });

  describe('percent', () => {
    it('percent support auto', () => {
      const { container } = render(<Spin percent="auto" />);

      act(() => {
        jest.advanceTimersByTime(100000);
      });

      const nowPTG = Number(
        container.querySelector('[role="progressbar"]')?.getAttribute('aria-valuenow'),
      );

      expect(nowPTG).toBeGreaterThanOrEqual(1);
    });

    it('custom indicator has percent', () => {
      const MyIndicator = ({ percent }: { percent?: number }) => (
        <div className="custom-indicator">{percent}</div>
      );
      const { container } = render(<Spin indicator={<MyIndicator />} percent={23} />);
      expect(container.querySelector('.custom-indicator')?.textContent).toBe('23');
    });
  });

  it('custom styles', () => {
    const customStyles = {
      root: { background: 'rgb(255, 0, 0)' },
      indicator: { color: 'rgb(0, 0, 255)' },
      mask: { background: 'rgb(0, 255, 0)' },
    };
    const customClassNames = {
      root: 'custom-root',
      indicator: 'custom-indicator',
      mask: 'custom-mask',
    };
    const { container } = render(<Spin styles={customStyles} classNames={customClassNames} />);
    const { container: fullscreenContainer } = render(
      <Spin fullscreen styles={customStyles} classNames={customClassNames} />,
    );
    expect(container.querySelector('.custom-root'))?.toHaveStyle('background: rgb(255, 0, 0)');
    expect(fullscreenContainer.querySelector('.custom-mask'))?.toHaveStyle(
      'background: rgb(0, 255, 0)',
    );
    expect(fullscreenContainer.querySelector('.custom-indicator'))?.toHaveStyle(
      'color: rgb(0, 0, 255)',
    );
  });

  describe('deprecated API warnings', () => {
    it('should warn when using deprecated tip prop', () => {
      const errSpy = jest.spyOn(console, 'error').mockImplementation(() => {});

      render(
        <Spin tip="Loading...">
          <div>content</div>
        </Spin>,
      );

      expect(errSpy).toHaveBeenCalledWith(
        'Warning: [antd: Spin] `tip` is deprecated. Please use `description` instead.',
      );

      errSpy.mockRestore();
    });

    it('should warn when using deprecated tip in classNames', () => {
      const errSpy = jest.spyOn(console, 'error').mockImplementation(() => {});

      render(<Spin classNames={{ tip: 'custom-tip' }} />);

      expect(errSpy).toHaveBeenCalledWith(
        'Warning: [antd: Spin] `classNames.tip and styles.tip` is deprecated. Please use `classNames.description and styles.description` instead.',
      );

      errSpy.mockRestore();
    });

    it('should warn when using deprecated tip in styles', () => {
      const errSpy = jest.spyOn(console, 'error').mockImplementation(() => {});

      render(<Spin styles={{ tip: { color: 'blue' } }} />);

      expect(errSpy).toHaveBeenCalledWith(
        'Warning: [antd: Spin] `classNames.tip and styles.tip` is deprecated. Please use `classNames.description and styles.description` instead.',
      );

      errSpy.mockRestore();
    });

    it('should warn when using deprecated mask in classNames', () => {
      const errSpy = jest.spyOn(console, 'error').mockImplementation(() => {});

      render(<Spin classNames={{ mask: 'custom-mask' }} />);

      expect(errSpy).toHaveBeenCalledWith(
        'Warning: [antd: Spin] `classNames.mask and styles.mask` is deprecated. Please use `classNames.root and styles.root` instead.',
      );

      errSpy.mockRestore();
    });

    it('should warn when using deprecated mask in styles', () => {
      const errSpy = jest.spyOn(console, 'error').mockImplementation(() => {});

      render(<Spin styles={{ mask: { background: 'red' } }} />);

      expect(errSpy).toHaveBeenCalledWith(
        'Warning: [antd: Spin] `classNames.mask and styles.mask` is deprecated. Please use `classNames.root and styles.root` instead.',
      );

      errSpy.mockRestore();
    });

    it('should use description instead of tip', () => {
      const { container } = render(
        <Spin description="Loading...">
          <div>content</div>
        </Spin>,
      );

      expect(container.querySelector('.g-spin-description')?.textContent).toBe('Loading...');
    });

    it('should warning when using wrapperClassName', () => {
      const errSpy = jest.spyOn(console, 'error').mockImplementation(() => {});
      render(
        <Spin wrapperClassName="custom-wrapper">
          <div>content</div>
        </Spin>,
      );

      expect(errSpy).toHaveBeenCalledWith(
        'Warning: [antd: Spin] `wrapperClassName` is deprecated. Please use `classNames.root` instead.',
      );

      errSpy.mockRestore();
    });
  });
});
