// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Spin if indicator set null should not be render default indicator 1`] = `
<div
  aria-busy="true"
  aria-live="polite"
  class="g-spin g-spin-spinning g-spin-section css-var-root"
>
  <span
    class="g-spin-dot-holder"
  >
    <span
      class="g-spin-dot g-spin-dot-spin"
    >
      <i
        class="g-spin-dot-item"
      />
      <i
        class="g-spin-dot-item"
      />
      <i
        class="g-spin-dot-item"
      />
      <i
        class="g-spin-dot-item"
      />
    </span>
  </span>
</div>
`;

exports[`Spin rtl render component should be rendered correctly in RTL direction 1`] = `
<div
  aria-busy="true"
  aria-live="polite"
  class="g-spin g-spin-spinning g-spin-rtl g-spin-section css-var-root"
>
  <span
    class="g-spin-dot-holder"
  >
    <span
      class="g-spin-dot g-spin-dot-spin"
    >
      <i
        class="g-spin-dot-item"
      />
      <i
        class="g-spin-dot-item"
      />
      <i
        class="g-spin-dot-item"
      />
      <i
        class="g-spin-dot-item"
      />
    </span>
  </span>
</div>
`;

exports[`Spin should render custom indicator when it's set 1`] = `
<div
  aria-busy="true"
  aria-live="polite"
  class="g-spin g-spin-spinning g-spin-section css-var-root"
>
  <div
    class="custom-indicator g-spin-dot"
  />
</div>
`;

exports[`Spin should support static method Spin.setDefaultIndicator 1`] = `
<div
  aria-busy="true"
  aria-live="polite"
  class="g-spin g-spin-spinning g-spin-section css-var-root"
>
  <em
    class="custom-spinner g-spin-dot"
  />
</div>
`;
